# IMXRT1050-EVKB

dev_quickstart/: FITkit3_dev_quickstart_en.md  IMXRT1050_EVKB_dev_quickstart_en.md
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/CSI/boards/evkmimxrt1050/driver_examples/csi/ccir656/: csi_ccir656.c  csi_ccir656.xml  example.xml  fsl_ov7725.c  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/CSI/boards/evkmimxrt1050/driver_examples/csi/ccir656/armgcc/: CMakeLists.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/CSI/boards/evkmimxrt1050/driver_examples/csi/ccir656/iar/: csi_ccir656.ewp  csi_ccir656.eww
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/CSI/boards/evkmimxrt1050/driver_examples/csi/ccir656/mdk/: csi_ccir656.uvoptx  csi_ccir656.uvprojx
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/CSI/boards/evkmimxrt1050/driver_examples/csi/rgb565/: csi_rgb565.c  csi_rgb565.xml  example.xml  pin_mux.c  pin_mux.h  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/CSI/boards/evkmimxrt1050/driver_examples/csi/rgb565/armgcc/: CMakeLists.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/CSI/boards/evkmimxrt1050/driver_examples/csi/rgb565/iar/: csi_rgb565.ewp  csi_rgb565.eww
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/CSI/boards/evkmimxrt1050/driver_examples/csi/rgb565/mdk/: csi_rgb565.uvoptx  csi_rgb565.uvprojx
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexIO/boards/evkmimxrt1050/driver_examples/flexio/i2c/interrupt_lpi2c_transfer/: example.xml  flexio_i2c_interrupt_lpi2c_transfer.c  flexio_i2c_interrupt_lpi2c_transfer.xml  pin_mux.c  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexIO/boards/evkmimxrt1050/driver_examples/flexio/i2c/read_accel_value_transfer/: example.xml  flexio_i2c_read_accel_value_transfer.c  flexio_i2c_read_accel_value_transfer.xml  pin_mux.c  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexIO/boards/evkmimxrt1050/driver_examples/flexio/i2s/edma_transfer/: example.xml  flexio_i2s_edma_transfer.c  flexio_i2s_edma_transfer.xml  pin_mux.c  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexIO/boards/evkmimxrt1050/driver_examples/flexio/i2s/interrupt_transfer/: example.xml  flexio_i2s_interrupt_transfer.c  flexio_i2s_interrupt_transfer.xml  pin_mux.h  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexIO/boards/evkmimxrt1050/driver_examples/flexio/uart/edma_transfer/: example.xml  flexio_uart_edma_transfer.c  flexio_uart_edma_transfer.xml  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexIO/boards/evkmimxrt1050/driver_examples/flexio/uart/int_rb_transfer/: example.xml  flexio_uart_int_rb_transfer.c  flexio_uart_int_rb_transfer.xml  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexIO/boards/evkmimxrt1050/driver_examples/flexio/uart/interrupt_transfer/: example.xml  flexio_uart_interrupt_transfer.c  flexio_uart_interrupt_transfer.xml  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexIO/boards/evkmimxrt1050/driver_examples/flexio/uart/polling_transfer/: example.xml  flexio_uart_polling_transfer.c  flexio_uart_polling_transfer.xml  pin_mux.c  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/FlexSPI/boards/evkmimxrt1050/driver_examples/flexspi/nor/polling_transfer/: example.xml  flexspi_nor_polling_transfer.c  flexspi_nor_polling_transfer.xml  pin_mux.c  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/LPSPI/boards/evkmimxrt1050/cmsis_driver_examples/lpspi/edma_b2b_transfer/master/: RTE_Device.h  cmsis_lpspi_edma_b2b_transfer_master.c  cmsis_lpspi_edma_b2b_transfer_master.xml  example.xml  (+1 more)
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/LPSPI/boards/evkmimxrt1050/driver_examples/lpspi/interrupt/: example.xml  lpspi_interrupt.c  lpspi_interrupt.xml  pin_mux.c  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/LPSPI/boards/evkmimxrt1050/rtos_examples/freertos_lpspi/: example.xml  freertos_lpspi.c  freertos_lpspi.xml  pin_mux.h  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/LPSPI/boards/evkmimxrt1050/rtos_examples/freertos_lpspi/armgcc/: CMakeLists.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/LPSPI/boards/evkmimxrt1050/rtos_examples/freertos_lpspi/iar/: freertos_lpspi.ewp  freertos_lpspi.eww
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/LPSPI/boards/evkmimxrt1050/rtos_examples/freertos_lpspi/mdk/: freertos_lpspi.uvoptx  freertos_lpspi.uvprojx
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/PWM/boards/evkmimxrt1050/driver_examples/pwm/: example.xml  pin_mux.c  pwm.c  pwm.xml  readme.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/PWM/boards/evkmimxrt1050/driver_examples/pwm/armgcc/: CMakeLists.txt
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/PWM/boards/evkmimxrt1050/driver_examples/pwm/iar/: pwm.ewp  pwm.eww
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/PWM/boards/evkmimxrt1050/driver_examples/pwm/mdk/: pwm.uvoptx  pwm.uvprojx
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/SPDIF/boards/evkmimxrt1050/driver_examples/spdif/edma_transfer/: example.xml  pin_mux.c  pin_mux.h  readme.txt  spdif_edma_transfer.c  spdif_edma_transfer.xml
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/SPDIF/boards/evkmimxrt1050/driver_examples/spdif/interrupt_transfer/: example.xml  pin_mux.c  readme.txt  spdif_interrupt_transfer.c  spdif_interrupt_transfer.xml
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/WiFi_QCA/boards/evkmimxrt1050/demo_apps/wifi_qca/qca_demo/: example.xml  main.c  pin_mux.c  pin_mux.h  qca_demo.xml  readme.txt  wlan_qcom.c
i.MXRT1050 EVK Extension Feature Example Code and HW Guide/WiFi_QCA/boards/evkmimxrt1050/demo_apps/wifi_qca/qca_demo/armgcc/: CMakeLists.txt  build_all.bat  build_all.sh  clean.bat  clean.sh
(+165 files in other folders)
